refactor: Improving design and scroll of sessions page